crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_batch.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
assertion_line: 74
expression: "&batch"
---
{
  "data": {
    "hash": "0xb5515a80204963f7db40e98af11aedb49a394b1c7e3d8b5b7a33346b8627444f",
    "number": 0,
    "receipt": 0.0,
    "rollup_height": 0,
    "tx_range": {
      "end": 2,
      "start": 0
    },
    "type": "batch"
  },
  "meta": {}
}
