crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_event.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: response.data
---
{
  "key": "foo",
  "module": {
    "name": "Bank"
  },
  "number": 0,
  "type": "event",
  "value": {
    "token_created": {
      "authorized_minters": [],
      "coins": {
        "amount": 0,
        "token_id": "token_1rwrh8gn2py0dl4vv65twgctmlwck6esm2as9dftumcw89kqqn3nqrduss6"
      },
      "mint_to_address": {
        "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
      },
      "minter": {
        "module": "module_1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqn7stmj"
      },
      "token_name": "token"
    }
  }
}
