crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_latest_slot.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
assertion_line: 43
expression: "&slot"
---
{
  "data": {
    "batch_range": {
      "end": 2,
      "start": 0
    },
    "finality_status": "finalized",
    "hash": "0xd1231a38586e68d0405dc55ae6775e219f29fff1f7e0c6410d0ac069201e550b",
    "number": 0,
    "state_root": "0x73746174652d726f6f742d30",
    "type": "slot"
  },
  "meta": {}
}
