crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__get_tx.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "&tx"
---
{
  "data": {
    "batchNumber": 0,
    "body": "dHgxIGJvZHk=",
    "eventRange": {
      "end": 0,
      "start": 0
    },
    "hash": "0x709b55bd3da0f5a838125bd0ee20c5bfdd7caba173912d4281cae816b79a201b",
    "number": 0,
    "receipt": {
      "result": "successful"
    },
    "type": "tx"
  },
  "meta": {}
}
