crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__global_404_error.snap
---
source: crates/full-node/sov-ledger-apis/tests/integration/main.rs
expression: "serde_json::from_str::<serde_json::Value>(&response_body).unwrap()"
---
{
  "errors": [
    {
      "details": {
        "url": "/foobar-not-found"
      },
      "status": 404,
      "title": "Not Found"
    }
  ],
  "meta": {}
}
